second commit in gder code project

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title>git tuto</title>
+		<style type="text/css">
+			h1
+			{
+				position: absolute;
+				top: 40%;
+				width: 100%; 
+				text-align: center;
+			}
+		</style>
 	</head>
 	<body> 
 		<h1>Hello gderCode </h1>
