--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 				width: 100%; 
 				text-align: center;
 			}
+
+			body
+			{
+				background-color: #2ecc71;
+				color: white; 
+			}
 		</style>
 	</head>
 	<body> 
