different pages commit between branches

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 			body
 			{
 				background-color: #2ecc71;
-				color: white; 
+				color: white;  
 			}
 		</style>
 	</head>
 	<body> 
-		<h1>Hello gderCode </h1>
+		<h1>Hello gderCode <br>
+		Branch is gderTest</h1>
 	</body>
 </html>
